build/testuserdir/var/cache/index/s1/errors/1/vendor/phpunit/phpunit-mock-objects/tests/Generator/class_with_method_with_nullable_typehinted_variadic_arguments.phpt.warn
WARNING:11:POSSIBLE Syntax Error (check preceding valid syntax error)
WARNING:11:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	)
WARNING:14:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	}
